# Students-Website

./: 404.html  README.md  TODO.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish_github_pages.yml
content/administrative/: index.html
content/contacts/: index.html
content/courses/: index.html
content/courses/electives/: index.html
content/courses/electivesapproval/: index.html
content/courses/externelectives/: index.html
content/courses/mandatory/: index.html
content/documents/: index.html
content/links/: index.html
content/moocs/: index.html
search/: search_index.json
src/: mkdocs.yml  package-lock.json
src/docs/: index.md
src/docs/content/: administrative.md  contacts.md  documents.md  links.md  moocs.md
src/docs/content/courses/: electives.md  electivesapproval.md  externelectives.md  index.md  mandatory.md
src/overrides/: main.html
src/overrides/partials/: copyright.html
stylesheets/: extra.css
